--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+
 python:
 - "2.7"
 
@@ -13,7 +14,7 @@ addons:
 install:
 # Upgrade pip setuptools and wheel
 - pip install -U pip wheel setuptools
-- pip install .[precommit,testing]
+- pip install --no-use-pep517 -e .[precommit,testing]
 
 env:
 - TEST_AIIDA_BACKEND=django
