--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,9 +1,10 @@
-optimade~=0.7
+optimade~=0.8
 requests~=2.23
-jupyterlab~=2.0
+jupyterlab~=2.1
 ipywidgets~=7.5
 nglview~=2.7
 numpy~=1.18
 pandas~=1.0
+ase~=3.19
 appmode
 voila
