Update README with info on configuration of Voilà
Fix configuration name in jupyter_config.json

--- a/jupyter_config.json
+++ b/jupyter_config.json
@@ -1,6 +1,6 @@
 {
     "VoilaConfiguration": {
-        "enable_nbextension": true
+        "enable_nbextensions": true
     },
     "VoilaExecutePreprocessor": {
         "timeout": 180
