Add materialscloud Voilà template
Extend run.sh with updating the symlinked materialscloud-voila-template
repository (now a git submodule) and copy the template into the correct
jupyter data dir with /voila/templates/

--- a/jupyter_config.json
+++ b/jupyter_config.json
@@ -1,6 +1,7 @@
 {
     "VoilaConfiguration": {
-        "enable_nbextensions": true
+        "enable_nbextensions": true,
+        "template": "materialscloud"
     },
     "VoilaExecutePreprocessor": {
         "timeout": 180
