--- a/requirements_testing.txt
+++ b/requirements_testing.txt
@@ -1,3 +1,13 @@
+
+appmode~=0.8.0
+ase~=3.20
 codecov~=2.1
+ipywidgets~=7.5
+jupyterlab~=2.2
+nglview~=2.7
+numpy~=1.19
 pytest~=6.0
 pytest-cov~=2.10
+requests~=2.24
+pandas~=1.1
+voila~=0.1.22
