--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "materialscloud-voila-template"]
-	path = materialscloud-voila-template
-	url = https://github.com/materialscloud-org/materialscloud-voila-template
+[submodule "voila-materialscloud-template"]
+	path = voila-materialscloud-template
+	url = https://github.com/materialscloud-org/voila-materialscloud-template
+	branch = develop
