--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,21 +3,23 @@ updates:
 - package-ecosystem: pip
   directory: "/"
   schedule:
-    interval: daily
-    time: "04:00"
-  open-pull-requests-limit: 10
+    interval: weekly
+  open-pull-requests-limit: 20
   target-branch: mcloud
 - package-ecosystem: pip
   directory: "/"
   schedule:
-    interval: daily
-    time: "04:00"
-  open-pull-requests-limit: 10
+    interval: weekly
+  open-pull-requests-limit: 20
   target-branch: develop
 - package-ecosystem: pip
   directory: "/"
   schedule:
-    interval: daily
-    time: "04:00"
-  open-pull-requests-limit: 10
+    interval: weekly
+  open-pull-requests-limit: 20
   target-branch: aiidalab
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: daily
+  target-branch: develop
