--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,10 +1,1 @@
-optimade~=0.11.0
-requests~=2.24
-jupyterlab~=2.2
-ipywidgets~=7.5
-nglview~=2.7
-numpy~=1.19
-pandas~=1.1
-ase~=3.20
-appmode
-voila
+../requirements.txt
