--- a/.github/workflows/publish-on-pypi.yml
+++ b/.github/workflows/publish-on-pypi.yml
@@ -3,12 +3,12 @@ name: Publish on PyPI
 on:
   push:
     tags:
-      - v[0-9]+.[0-9]+.[0-9]+*
+      - 20[2-9][0-9].?[0-9].?[0-9]*
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-    if: github.repository == 'CasperWA/voila-optimade-client' && startsWith(github.ref, 'refs/tags/v')
+    if: github.repository == 'CasperWA/voila-optimade-client' && startsWith(github.ref, 'refs/tags/20')
 
     steps:
     - name: Set up Python 3.8
