--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,12 +1,1 @@
-appdirs~=1.4.4
-appmode~=0.8.0
-ase~=3.20
-click~=7.1
-ipywidgets~=7.5
-jupyterlab~=2.2
-nglview~=2.7
-numpy~=1.19
-optimade~=0.12.0
-pandas~=1.1
-requests~=2.24
-voila~=0.1.23
+../requirements.txt
