Add logo used in notebook

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include requirements*.txt
 include LICENSE
 include optimade_client/cli/static/*.json
+include img/optimade-text-right-transparent-bg.png
