--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include requirements*.txt
 include LICENSE
 include optimade_client/cli/static/*.json
-include img/optimade-text-right-transparent-bg.png
+include optimade_client/img/*.png
