Update MANIFEST.in with move of *.json (#180)
Update MANIFEST.in.
Add notebook and moved jupyter_config.json.

Update .gitignore.

Minimize update-version invoke task.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
-include requirements*.txt
+exclude .*.ipynb
+include *.ipynb
+include jupyter_config.json
 include LICENSE
-include optimade_client/cli/static/*.json
+include README.md
+include requirements*.txt
 include optimade_client/img/*.png
