New tests for CLI
Use multiprocessing to run CLI.
This is to ensure we can use monkeypatch and are going through the
Python API and not invoking the CLI through a separate Python process.

Extend CI to take `server` extra into account.

Fix and clean CLI according to tests.
Remove cli/options.py.
It only contained a single variable definition. This has been moved to
cli/run.py.

Avoid importing optimade-client package in CLI.
Define package version manually in CLI.
Add new manual package version number to `update-version` invoke task.
Add optimade_client/cli/run.py to Publish on PyPI workflow.

Create Jupyter config dir if it doesn't exist.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,14 +59,20 @@ jobs:
       with:
         python-version: ${{ matrix.python-version}}
 
-    - name: Install dependencies
+    - name: Install initial dependencies
       run: |
         python -m pip install -U pip
         pip install -U setuptools
         pip install -e .[testing]
 
     - name: PyTest
-      run: pytest -vvv --cov=optimade_client --cov-report=xml tests/
+      run: pytest -vvv --cov=optimade_client --cov-report=xml --cov-append tests/
+
+    - name: Install server dependencies
+      run: pip install -e .[server]
+
+    - name: PyTest (with 'server' extra)
+      run: pytest --cov=optimade_client --cov-report=xml --cov-append tests/cli/
 
     - name: Upload coverage to Codecov
       if: matrix.python-version == 3.8 && github.repository == 'CasperWA/voila-optimade-client'
