Add flake8 to pre-commit
Remove lint CI, now included in pre-commit CI.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,9 @@ repos:
         .codecov.yml
       )$
     language: system
+
+- repo: https://gitlab.com/pycqa/flake8
+  rev: '3.8.4'
+  hooks:
+  - id: flake8
+    args: [--count, --show-source, --statistics]
