--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,15 @@ repos:
   hooks:
   - id: black
     name: Blacken
+
+- repo: local
+  hooks:
+  - id: codecov-validator
+    name: Validate .codecov.yml
+    description: Validate .codecov.yml using codecov's online validation tool.
+    entry: ./.ci/codecov_validator.sh
+    files: >
+      (?x)^(
+        .codecov.yml
+      )$
+    language: system
