--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,1 +1,10 @@
-../requirements.txt
+appdirs~=1.4.4
+ase~=3.20
+cachecontrol[filecache]~=0.12.6
+ipywidgets~=7.5
+nglview~=2.7
+optimade~=0.12.1
+pandas~=1.1
+requests~=2.24
+voila~=0.2.4
+widget_periodictable~=2.1
