--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,4 @@ include LICENSE
 include README.md
 include requirements*.txt
 include optimade_client/img/*.png
-include static/*.json
+include optimade_client/cli/static/*.json
