--- a/.github/workflows/publish-on-pypi.yml
+++ b/.github/workflows/publish-on-pypi.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.repository == 'CasperWA/voila-optimade-client' && startsWith(github.ref, 'refs/tags/20')
     env:
-      PUBLISH_UPDATE_BRANCH: develop_test
+      PUBLISH_UPDATE_BRANCH: develop
 
     steps:
     - name: Checkout repository
@@ -30,7 +30,7 @@ jobs:
       run: .github/static/update_version.sh
 
     - name: Push updates to '${{ env.PUBLISH_UPDATE_BRANCH }}'
-      uses: CasperWA/push-protected@master
+      uses: CasperWA/push-protected@v2
       with:
         token: ${{ secrets.RELEASE_PAT }}
         branch: ${{ env.PUBLISH_UPDATE_BRANCH }}
