--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,7 @@ jobs:
       run: |
         pwd
         export ORIGINAL_PWD=$(pwd)
-        git tag -l 20* --sort="version:refname" | tail -1
+        git fetch origin
         export VERSION=$( git tag -l 20* --sort="version:refname" | tail -1 )
         echo "ORIGINAL_PWD: ${ORIGINAL_PWD}"
         echo "VERSION: ${VERSION}"
