--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,6 +87,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
@@ -103,11 +105,11 @@ jobs:
 
     - name: Try to install source distribution
       run: |
-        pwd
-        export ORIGINAL_PWD=$(pwd)
-        git fetch origin
-        export VERSION=$( git tag -l 20* --sort="version:refname" | tail -1 )
-        echo "ORIGINAL_PWD: ${ORIGINAL_PWD}"
-        echo "VERSION: ${VERSION}"
+        # Get latest git tag (for version)
+        # Move to root directory to ensure we're not in a place where checked out files
+        # may be sourced
+        ORIGINAL_PWD=$(pwd)
+        VERSION=$( git tag -l 20* --sort="version:refname" | tail -1 )
         cd /
+        if [ "$(pwd)" = "${ORIGINAL_PWD}" ]; then echo "In original pwd: $(pwd)" && exit 1; fi
         pip install ${ORIGINAL_PWD}/dist/optimade-client-${VERSION}.tar.gz
