Use ipywidgets-extended DropdownExtended widget
Disable providers that cannot be used with the client, but keep them in
the Dropdown of providers.
The disabled providers cannot be chosen due utilizing the
DropdownExtended widget, which let's you individually disable options.
Sort provider list to attach "disabled" providers at the end of the
options list.
Skip "exmpl", "optimade", and "aiida" permanently from the OPTIMADE list
of providers.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs~=1.4.4
 ase~=3.20
 cachecontrol[filecache]~=0.12.6
 ipywidgets~=7.5
+ipywidgets-extended~=1.0
 nglview~=2.7
 optimade~=0.12.3
 pandas~=1.1
