--- a/requirements/requirements_base.txt
+++ b/requirements/requirements_base.txt
@@ -1,6 +1,7 @@
 appdirs~=1.4.4
 cachecontrol[filecache]~=0.12.6
 ipywidgets~=7.5
+ipywidgets-extended~=1.0
 nglview~=2.7
 optimade~=0.12.3
 pandas~=1.1
