--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ ipywidgets~=7.6
 ipywidgets-extended~=1.0
 nglview~=2.7
 optimade~=0.12.5
-pandas~=1.2
+pandas~=1.1 ; python_version<'3.7'
+pandas~=1.2 ; python_version>='3.7'
 requests~=2.25
 voila~=0.2.4
 widget_periodictable~=2.1
