--- a/requirements/requirements_base.txt
+++ b/requirements/requirements_base.txt
@@ -4,6 +4,7 @@ ipywidgets~=7.6
 ipywidgets-extended~=1.0
 nglview~=2.7
 optimade~=0.12.5
-pandas~=1.2
+pandas~=1.1;python_version<'3.7'
+pandas~=1.2;python_version>'3.6'
 requests~=2.25
 widget_periodictable~=2.1
