--- a/.aiidalab/requirements.txt
+++ b/.aiidalab/requirements.txt
@@ -2,8 +2,8 @@ appdirs~=1.4.4
 cachecontrol[filecache]~=0.12.6
 ipywidgets~=7.6
 ipywidgets-extended~=1.1
-nglview~=3.0
+nglview>=2.7
 optimade~=0.16.1
 pandas~=1.3
-requests~=2.26
+requests>=2.25
 widget_periodictable~=2.1
