--- a/.aiidalab/requirements.txt
+++ b/.aiidalab/requirements.txt
@@ -1,7 +1,7 @@
 appdirs~=1.4.4
 cachecontrol[filecache]~=0.12.6
 ipywidgets~=7.6
-ipywidgets-extended~=1.1
+ipywidgets-extended>=1.1.1,<2
 nglview>=2.7
 optimade~=0.16.1
 pandas~=1.3
