--- a/requirements/requirements_base.txt
+++ b/requirements/requirements_base.txt
@@ -1,7 +1,7 @@
 appdirs~=1.4.4
 cachecontrol[filecache]~=0.12.6
 ipywidgets~=7.6
-ipywidgets-extended~=1.1
+ipywidgets-extended>=1.1.1,<2
 nglview~=3.0
 optimade~=0.16.4
 pandas~=1.3
