Update dependencies + minimum `ipywidgets-extended` version (#359)
Update dependencies:

* Update voila requirement from ~=0.2.15 to ~=0.2.16
* Update pytest-cov requirement from ~=2.12 to ~=3.0

Ensure minimum `ipywidgets-extended` version.
Minimum version should be v1.1.1.

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ appdirs~=1.4.4
 ase~=3.22
 cachecontrol[filecache]~=0.12.6
 ipywidgets~=7.6
-ipywidgets-extended~=1.1
+ipywidgets-extended>=1.1.1,<2
 nglview~=3.0
 optimade~=0.16.4
 pandas~=1.3
 requests~=2.26
 setuptools>=49.4
-voila~=0.2.15
+voila~=0.2.16
 widget_periodictable~=3.0
