--- a/.aiidalab/setup.cfg
+++ b/.aiidalab/setup.cfg
@@ -5,4 +5,4 @@ description = AiiDAlab app to query for and import structures from OPTIMADE prov
 external_url = https://www.optimade.org
 documentation_url = https://github.com/CasperWA/voila-optimade-client#readme
 state = stable
-categories = utility
+categories = utilities
