--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI - Tests
 
 on:
   pull_request:
@@ -10,38 +10,32 @@ on:
 
 jobs:
   pre-commit:
-
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
-
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-    - name: Set up Python ${{ matrix.python-version}}
+    - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version}}
+        python-version: 3.7
 
     - name: Install dependencies
       run: |
         python -m pip install -U pip
-        pip install -U setuptools
-        pip install pre-commit
+        pip install -U setuptools wheel
 
-    - name: Set PY env var
-      run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
+        while IFS="" read -r line || [ -n "${line}" ]; do
+          if [[ "${line}" =~ ^pre-commit.*$ ]]; then
+            pre_commit="${line}"
+          fi
+        done < requirements/requirements_dev.txt
 
-    - uses: actions/cache@v2
-      with:
-        path: ~/.cache/pre-commit
-        key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
+        pip install ${pre_commit}
 
     - name: Test with pre-commit
-      run: pre-commit run --all-files || ( git status --short ; git diff ; exit 1 )
+      run: pre-commit run --all-files --show-diff-on-failure
 
   pytest:
     runs-on: ubuntu-latest
@@ -52,7 +46,8 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
     - name: Set up Python ${{ matrix.python-version}}
       uses: actions/setup-python@v2
@@ -62,7 +57,7 @@ jobs:
     - name: Install initial dependencies
       run: |
         python -m pip install -U pip
-        pip install -U setuptools
+        pip install -U setuptools wheel
         pip install -e .[testing]
 
     - name: PyTest
@@ -83,6 +78,7 @@ jobs:
         flags: optimade-client
 
   build-package:
+    name: Build source distribution
     runs-on: ubuntu-latest
 
     steps:
