Update dependency automation
These workflows are similar to the ones in the OPTIMADE Gateway (see
https://github.com/Materials-Consortia/optimade-gateway).

The following is done:
- Run Dependabot updates every Monday at 5 UTC.
- Merge into/reset permanent, dedicated dependabot branch whenever there
  is a new push to `develop` (the default branch).
- Create a PR every Wednesday at 6:30 UTC, requesting to merge a copy of
  the dedicated dependabot branch into `develop`.
  As a bonus, before opening this PR, an attempt is made at also
  updating the `pre-commit` hooks and running `pre-commit` to commit any
  changes.
- Enable "auto-merge" for all Dependabot-created PRs.

Remaining issues/manual labour:
- Fix `pre-commit` if issues arise when running it.
- Fix Dependabot dependency PRs if they do not pass the CI tests.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,10 +4,18 @@ updates:
   directory: "/"
   schedule:
     interval: weekly
-  open-pull-requests-limit: 20
-  target-branch: develop
+    day: monday
+    time: "05:00"
+  # Should be bigger than or equal to the total number of dependencies (currently 9)
+  open-pull-requests-limit: 30
+  target-branch: ci/dependabot-updates
+  labels:
+  - dependencies
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: daily
-  target-branch: develop
+    time: "05:00"
+  target-branch: ci/dependabot-updates
+  labels:
+  - github_actions
