--- a/.aiidalab/requirements.txt
+++ b/.aiidalab/requirements.txt
@@ -1,9 +1,9 @@
 appdirs~=1.4.4
-cachecontrol[filecache]~=0.12.6
-ipywidgets~=7.6
-ipywidgets-extended>=1.1.1,<2,!=1.2.0
-nglview>=2.7
-optimade~=0.16.1
+cachecontrol[filecache]~=0.12.11
+ipywidgets~=7.7
+ipywidgets-extended>=1.1.1,<2,!=1.2.0,!=1.2.1
+nglview>=3.0
+optimade~=0.18.0
 pandas~=1.3
-requests>=2.25
-widget_periodictable~=2.1
+requests>=2.28
+widget_periodictable~=3.0
