--- a/.github/workflows/ci_dependabot.yml
+++ b/.github/workflows/ci_dependabot.yml
@@ -25,10 +25,10 @@ jobs:
       with:
         ref: ${{ env.DEFAULT_REPO_BRANCH }}
 
-    - name: Set up Python 3.7
+    - name: Set up Python 3.8
       uses: actions/setup-python@v4
       with:
-        python-version: 3.7
+        python-version: "3.8"
 
     - name: Install `pre-commit` and dependencies
       run: |
