--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     exclude: README.md
 
 - repo: https://github.com/ambv/black
-  rev: 22.10.0
+  rev: 22.6.0
   hooks:
   - id: black
     name: Blacken
@@ -25,8 +25,11 @@ repos:
       )$
     language: system
 
-- repo: https://gitlab.com/pycqa/flake8
-  rev: '3.9.2'
+- repo: https://github.com/PyCQA/flake8
+  rev: 5.0.4
   hooks:
   - id: flake8
     args: [--count, --show-source, --statistics]
+    additional_dependencies:
+      - flake8-bugbear==22.7.1
+
