--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -20,10 +20,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.7
+    - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
-        python-version: 3.7
+        python-version: "3.9"
 
     - name: Install Python dependencies
       run: |
