--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.8
+    - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
-        python-version: "3.8"
+        python-version: "3.9"
 
     - name: Install dependencies
       run: |
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9"]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
     - name: Checkout repository
@@ -70,7 +70,7 @@ jobs:
       run: pytest --cov=optimade_client --cov-report=xml --cov-append tests/cli/
 
     - name: Upload coverage to Codecov
-      if: matrix.python-version == 3.8 && github.repository == 'CasperWA/voila-optimade-client'
+      if: matrix.python-version == '3.9' && github.repository == 'CasperWA/voila-optimade-client'
       uses: codecov/codecov-action@v3
       with:
         name: optimade-client
