--- a/.aiidalab/requirements.txt
+++ b/.aiidalab/requirements.txt
@@ -1,10 +1,13 @@
+# Requirements set due to AiiDAlab dependencies:
+#  urllib3
+
 appdirs~=1.4.4
-cachecontrol[filecache]~=0.12.11
+cachecontrol[filecache]~=0.13.1
 ipywidgets~=7.7
 ipywidgets-extended>=1.1.1,<2,!=1.2.0,!=1.2.1
 nglview>=3.0
-optimade~=0.18.0
-pandas~=1.3
-requests>=2.28
-urllib3<2
-widget_periodictable~=3.0
+optimade~=0.25.1
+pandas~=2.0
+requests~=2.31
+urllib3~=1.24
+widget_periodictable~=3.1
