--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -9,33 +9,30 @@ on:
       - 'push-action/**'
 
 jobs:
-  pre-commit:
-    runs-on: ubuntu-latest
+  basic_tests:
+    name: External
+    uses: SINTEF/ci-cd/.github/workflows/ci_tests.yml@v2.4.0
+    with:
+      # General
+      install_extras: "[dev]"
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      # pre-commit
+      run_pre-commit: true
+      python_version_pre-commit: "3.9"
+      skip_pre-commit_hooks: pylint
 
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.9"
+      # pylint & safety
+      run_pylint: false
+      run_safety: false
 
-    - name: Install dependencies
-      run: |
-        python -m pip install -U pip
-        pip install -U setuptools wheel
+      # Build package
+      run_build_package: true
+      python_version_package: "3.9"
+      build_libs: build
+      build_cmd: "python -m build"
 
-        while IFS="" read -r line || [ -n "${line}" ]; do
-          if [[ "${line}" =~ ^pre-commit.*$ ]]; then
-            pre_commit="${line}"
-          fi
-        done < requirements/requirements_dev.txt
-
-        pip install ${pre_commit}
-
-    - name: Test with pre-commit
-      run: pre-commit run --all-files --show-diff-on-failure
+      # Build documentation
+      run_build_docs: false
 
   pytest:
     runs-on: ubuntu-latest
@@ -76,14 +73,3 @@ jobs:
         name: optimade-client
         file: ./coverage.xml
         flags: optimade-client
-
-  build-package:
-    name: Build source distribution
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Check build and installation of PyPI source distribution
-      uses: CasperWA/check-sdist-action@v1
