--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -23,10 +23,10 @@ jobs:
       package_dirs: "optimade_client"
       version_update_changes_separator: ";"
       version_update_changes: |
-        optimade_client/__init__.py;__version__ = .+;__version__ = "{version}"
-        setup.py;version=([^,]+),;version="{version}",
-        optimade_client/informational.py;Client version.*</code>;Client version</b>: <code>{version}</code>
-        optimade_client/cli/run.py;VERSION = \".+\";VERSION = "{version}"
+        {package_dir}/__init__.py;__version__ = .+;__version__ = \"{version}\"
+        setup.py;version=([^,]+),;version=\"{version}\",
+        {package_dir}/informational.py;Client version.*\</code\>;Client version\</b\>: \<code\>{version}\</code\>
+        {package_dir}/cli/run.py;VERSION = \".+\";VERSION = \"{version}\"
       build_libs: "build"
       build_cmd: "python -m build"
       publish_on_pypi: true
