Revert "Remove if-condition"
This reverts commit 18e612c825490e1a8b993f4734fee45a291e24c7.

--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -12,7 +12,7 @@ jobs:
   publish:
     name: External
     uses: SINTEF/ci-cd/.github/workflows/cd_release.yml@test_release_workflow
-    # if: github.repository == 'CasperWA/voila-optimade-client' && startsWith(github.ref, 'refs/tags/20')
+    if: github.repository == 'CasperWA/voila-optimade-client' && startsWith(github.ref, 'refs/tags/20')
     with:
       # General
       git_username: CasperWA
